131-AKS-NetworkingPolicies-001/201-K8s-Deployments/321-DenyAllIngressExceptSameNamespaceNetworkingPolicy-001/1-denyAllIngressOutsiteNamespace.yaml
###################################################################################################################
# The deployment of the network policy to deny all ingress traffic
#
# Ingress traffic is denied on all pods, from all pods of the cluster with the exception of the pods in the same
# namespace
###################################################################################################################

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: app-1
  name: deny-from-other-namespaces
spec:
  podSelector:
    matchLabels: {}
  ingress:
  - from:
    - podSelector: {}
